CPTR354-SyntaxAnalysis/src/main/java/com/jonathan/project/OberonParser.java
/* OberonParser.java */
/* Generated By:JavaCC: Do not edit this line. OberonParser.java */
package com.jonathan.project;
public final class OberonParser implements OberonParserConstants { // Standard parser class setup...

  public static void main(String args[]) {
    OberonParser parser;
    java.io.InputStream input;

    if (args.length==1) {
      System.out.print(args[args.length-1] + ": ");
      try {
        input = new java.io.FileInputStream(args[args.length-1]);
      } catch (java.io.FileNotFoundException e) {
        System.out.println("File not found.");
        return;
      }
    } else if (args.length==0) {
      System.out.println("Reading from standard input...");
      input = System.in;
    } else {
      System.out.println("Usage: java OberonParser [inputfile]");
      return;
    }
    try {
      parser = new OberonParser(input);
      parser.translation_unit();
      System.out.println("Successful parse!");
    } catch (ParseException e) {
      String msg = e.getMessage();
      msg = msg.substring(0,msg.indexOf("\u005cn"));
      System.out.println("Syntax Error: "+msg);
    }
  }

/**************************************/
/********** START OF GRAMMAR **********/
/**************************************/
  static final public
void translation_unit() throws ParseException {
    Module();
  }

  static final public void Module() throws ParseException {
    jj_consume_token(MODULE);
    jj_consume_token(IDENT);
    jj_consume_token(54);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IMPORT:{
      ImportList();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    DeclSeq();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BEGIN:{
      jj_consume_token(BEGIN);
      StatementSeq();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(END);
    jj_consume_token(IDENT);
    jj_consume_token(55);
  }

  static final public void ImportList() throws ParseException {
    jj_consume_token(IMPORT);
    ImportSpec();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 56:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      jj_consume_token(56);
      ImportSpec();
    }
    jj_consume_token(54);
  }

  static final public void ImportSpec() throws ParseException {
    jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 57:{
      jj_consume_token(57);
      jj_consume_token(IDENT);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  static final public void DeclSeq() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:
      case TYPE:
      case VAR:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      VarTypeDecl();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PROCEDURE:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      ProcedureDecl();
    }
  }

  static final public void VarTypeDecl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONST:{
      jj_consume_token(CONST);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENT:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        ConstDecl();
        jj_consume_token(54);
      }
      break;
      }
    case TYPE:{
      jj_consume_token(TYPE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENT:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        TypeDecl();
        jj_consume_token(54);
      }
      break;
      }
    case VAR:{
      jj_consume_token(VAR);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENT:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        VarDecl();
        jj_consume_token(54);
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ConstDecl() throws ParseException {
    IdentDef();
    jj_consume_token(58);
    ConstExpr();
  }

  static final public void TypeDecl() throws ParseException {
    IdentDef();
    jj_consume_token(58);
    Type();
  }

  static final public void VarDecl() throws ParseException {
    IdentList();
    jj_consume_token(59);
    Type();
  }

  static final public void ProcedureDecl() throws ParseException {
    jj_consume_token(PROCEDURE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 60:{
      ForwardDecl();
      break;
      }
    case IDENT:
    case 61:{
      ProcDecl();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(54);
  }

  static final public void ProcDecl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:{
      Receiver();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    IdentDef();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:{
      FormalPars();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(54);
    DeclSeq();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BEGIN:{
      jj_consume_token(BEGIN);
      StatementSeq();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(END);
    jj_consume_token(IDENT);
  }

  static final public void ForwardDecl() throws ParseException {
    jj_consume_token(60);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:{
      Receiver();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    IdentDef();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:{
      FormalPars();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void FormalPars() throws ParseException {
    jj_consume_token(61);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:
    case IDENT:{
      FPSection();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 54:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        jj_consume_token(54);
        FPSection();
      }
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(62);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 59:{
      jj_consume_token(59);
      Qualident();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

  static final public void FPSection() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      jj_consume_token(VAR);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(IDENT);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 56:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      jj_consume_token(56);
      jj_consume_token(IDENT);
    }
    jj_consume_token(59);
    Type();
  }

  static final public void Receiver() throws ParseException {
    jj_consume_token(61);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      jj_consume_token(VAR);
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(IDENT);
    jj_consume_token(59);
    jj_consume_token(IDENT);
    jj_consume_token(62);
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      Qualident();
      break;
      }
    case ARRAY:{
      jj_consume_token(ARRAY);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NIL:
      case INTEGER:
      case REAL:
      case IDENT:
      case CHARACTER:
      case STRING:
      case 61:
      case 64:
      case 65:
      case 66:
      case 67:{
        ConstExpr();
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 56:{
            ;
            break;
            }
          default:
            jj_la1[22] = jj_gen;
            break label_9;
          }
          jj_consume_token(56);
          ConstExpr();
        }
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(OF);
      Type();
      break;
      }
    case RECORD:{
      jj_consume_token(RECORD);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        jj_consume_token(61);
        Qualident();
        jj_consume_token(62);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      FieldList();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 54:{
          ;
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          break label_10;
        }
        jj_consume_token(54);
        FieldList();
      }
      jj_consume_token(END);
      break;
      }
    case POINTER:{
      jj_consume_token(POINTER);
      jj_consume_token(TO);
      Type();
      break;
      }
    case PROCEDURE:{
      jj_consume_token(PROCEDURE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        FormalPars();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FieldList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      IdentList();
      jj_consume_token(59);
      Type();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
  }

  static final public void StatementSeq() throws ParseException {
    optStatement();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_11;
      }
      jj_consume_token(54);
      optStatement();
    }
  }

  static final public void optStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CASE:
    case EXIT:
    case FOR:
    case IF:
    case LOOP:
    case REPEAT:
    case RETURN:
    case WHILE:
    case WITH:
    case IDENT:{
      Statement();
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      Designator();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 57:{
        jj_consume_token(57);
        Expr();
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        Arguments();
      }
      break;
      }
    case IF:{
      jj_consume_token(IF);
      Expr();
      jj_consume_token(THEN);
      StatementSeq();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSIF:{
          ;
          break;
          }
        default:
          jj_la1[32] = jj_gen;
          break label_12;
        }
        jj_consume_token(ELSIF);
        Expr();
        jj_consume_token(THEN);
        StatementSeq();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        StatementSeq();
        break;
        }
      default:
        jj_la1[33] = jj_gen;
        ;
      }
      jj_consume_token(END);
      break;
      }
    case CASE:{
      jj_consume_token(CASE);
      Expr();
      jj_consume_token(OF);
      Case();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 63:{
          ;
          break;
          }
        default:
          jj_la1[34] = jj_gen;
          break label_13;
        }
        jj_consume_token(63);
        Case();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        StatementSeq();
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        ;
      }
      jj_consume_token(END);
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      Expr();
      jj_consume_token(DO);
      StatementSeq();
      jj_consume_token(END);
      break;
      }
    case REPEAT:{
      jj_consume_token(REPEAT);
      StatementSeq();
      jj_consume_token(UNTIL);
      Expr();
      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(IDENT);
      jj_consume_token(57);
      Expr();
      jj_consume_token(TO);
      Expr();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BY:{
        jj_consume_token(BY);
        ConstExpr();
        break;
        }
      default:
        jj_la1[36] = jj_gen;
        ;
      }
      jj_consume_token(DO);
      StatementSeq();
      jj_consume_token(END);
      break;
      }
    case LOOP:{
      jj_consume_token(LOOP);
      StatementSeq();
      jj_consume_token(END);
      break;
      }
    case WITH:{
      jj_consume_token(WITH);
      Guard();
      jj_consume_token(DO);
      StatementSeq();
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 63:{
          ;
          break;
          }
        default:
          jj_la1[37] = jj_gen;
          break label_14;
        }
        jj_consume_token(63);
        Guard();
        jj_consume_token(DO);
        StatementSeq();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        StatementSeq();
        break;
        }
      default:
        jj_la1[38] = jj_gen;
        ;
      }
      jj_consume_token(END);
      break;
      }
    case EXIT:{
      jj_consume_token(EXIT);
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NIL:
      case INTEGER:
      case REAL:
      case IDENT:
      case CHARACTER:
      case STRING:
      case 61:
      case 64:
      case 65:
      case 66:
      case 67:{
        Expr();
        break;
        }
      default:
        jj_la1[39] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[40] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Case() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NIL:
    case INTEGER:
    case REAL:
    case IDENT:
    case CHARACTER:
    case STRING:
    case 61:
    case 64:
    case 65:
    case 66:
    case 67:{
      CaseLabels();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 56:{
          ;
          break;
          }
        default:
          jj_la1[41] = jj_gen;
          break label_15;
        }
        jj_consume_token(56);
        CaseLabels();
      }
      jj_consume_token(59);
      StatementSeq();
      break;
      }
    default:
      jj_la1[42] = jj_gen;
      ;
    }
  }

  static final public void CaseLabels() throws ParseException {
    ConstExpr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOTDOT:{
      jj_consume_token(DOTDOT);
      ConstExpr();
      break;
      }
    default:
      jj_la1[43] = jj_gen;
      ;
    }
  }

  static final public void Guard() throws ParseException {
    Qualident();
    jj_consume_token(59);
    Qualident();
  }

  static final public void ConstExpr() throws ParseException {
    Expr();
  }

  static final public void Expr() throws ParseException {
    SimpleExpr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IN:
    case IS:
    case 58:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:{
      Relation();
      SimpleExpr();
      break;
      }
    default:
      jj_la1[44] = jj_gen;
      ;
    }
  }

  static final public void SimpleExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 64:
    case 65:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 64:{
        jj_consume_token(64);
        break;
        }
      case 65:{
        jj_consume_token(65);
        break;
        }
      default:
        jj_la1[45] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[46] = jj_gen;
      ;
    }
    Term();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case 64:
      case 65:{
        ;
        break;
        }
      default:
        jj_la1[47] = jj_gen;
        break label_16;
      }
      AddOp();
      Term();
    }
  }

  static final public void Term() throws ParseException {
    Factor();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIV:
      case MOD:
      case 74:
      case 75:
      case 76:{
        ;
        break;
        }
      default:
        jj_la1[48] = jj_gen;
        break label_17;
      }
      MulOp();
      Factor();
    }
  }

  static final public void Factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      Designator();
      Arguments();
      break;
      }
    case INTEGER:
    case REAL:{
      Number();
      break;
      }
    case CHARACTER:{
      jj_consume_token(CHARACTER);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case NIL:{
      jj_consume_token(NIL);
      break;
      }
    case 67:{
      Set();
      break;
      }
    case 61:{
      jj_consume_token(61);
      Expr();
      jj_consume_token(62);
      break;
      }
    case 66:{
      jj_consume_token(66);
      Factor();
      break;
      }
    default:
      jj_la1[49] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Set() throws ParseException {
    jj_consume_token(67);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NIL:
    case INTEGER:
    case REAL:
    case IDENT:
    case CHARACTER:
    case STRING:
    case 61:
    case 64:
    case 65:
    case 66:
    case 67:{
      Element();
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 56:{
          ;
          break;
          }
        default:
          jj_la1[50] = jj_gen;
          break label_18;
        }
        jj_consume_token(56);
        Element();
      }
      break;
      }
    default:
      jj_la1[51] = jj_gen;
      ;
    }
    jj_consume_token(68);
  }

  static final public void Element() throws ParseException {
    Expr();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOTDOT:{
      jj_consume_token(DOTDOT);
      Expr();
      break;
      }
    default:
      jj_la1[52] = jj_gen;
      ;
    }
  }

  static final public void Relation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 58:{
      jj_consume_token(58);
      break;
      }
    case 69:{
      jj_consume_token(69);
      break;
      }
    case 70:{
      jj_consume_token(70);
      break;
      }
    case 71:{
      jj_consume_token(71);
      break;
      }
    case 72:{
      jj_consume_token(72);
      break;
      }
    case 73:{
      jj_consume_token(73);
      break;
      }
    case IN:{
      jj_consume_token(IN);
      break;
      }
    case IS:{
      jj_consume_token(IS);
      break;
      }
    default:
      jj_la1[53] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AddOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 64:{
      jj_consume_token(64);
      break;
      }
    case 65:{
      jj_consume_token(65);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    default:
      jj_la1[54] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MulOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 74:{
      jj_consume_token(74);
      break;
      }
    case 75:{
      jj_consume_token(75);
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
      break;
      }
    case MOD:{
      jj_consume_token(MOD);
      break;
      }
    case 76:{
      jj_consume_token(76);
      break;
      }
    default:
      jj_la1[55] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* NB: Because Arguments() always appears after Designator(), there
   * will be a conflict if we get "(" Qualident() ")" - do we consume
   * this as part of the Designator(), or leave it for the Arguments()
   * The disambiguation in Designator() chooses the former, so the
   * semantic phase will have to disentangle this for function calls
   * with one (qualified) identifier as an argument.
   */
  static final public
void Arguments() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:{
      jj_consume_token(61);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NIL:
      case INTEGER:
      case REAL:
      case IDENT:
      case CHARACTER:
      case STRING:
      case 61:
      case 64:
      case 65:
      case 66:
      case 67:{
        ExprList();
        break;
        }
      default:
        jj_la1[56] = jj_gen;
        ;
      }
      jj_consume_token(62);
      break;
      }
    default:
      jj_la1[57] = jj_gen;
      ;
    }
  }
